Fixing the way the footer element renders on mobile
- Increased footer element's height to 20vh in order to eliminate a
problem with having too small of a height that lead to empty white space
under the footer

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body{
 
 footer{
   background: #f9e890;
-  height: 15vh;
+  height: 20vh;
   padding: 15px;
   margin: 10px 0 0 0;
 }
